<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_go1_description</name>
  <version>0.2.0</version>
  <description>Unitree Go1 robot description</description>
  <maintainer email="naoki.takahashi060@gmail.com">Naoki Takahashi</maintainer>
  <license>BSD 3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_merger</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
